src/components/layout/authLayout/authLayout.scss
@use '../../../utils/styles/variables' as *;

.auth_main {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100%;
  background-color: $primary-black;

  &_content {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    gap: 2rem;
    min-height: 40%;
    min-width: 40%;
    border: 1px solid $primary-grey;
    background-color: $medium-black;
    border-radius: 12px;
    padding: 1rem;

    &_header {
      &_span {
        display: flex;
        flex-direction: row;
      }
    }
  }

  &_logo {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    min-width: 10vw;
    cursor: pointer;

    &_image {
      position: relative;
      height: 14vh;
      min-width: 8vw;
      width: fit-content;
    }
    &_text {
      display: flex;
      flex-direction: column;
      width: 100%;
      justify-content: center;
      align-items: center;
    }
  }

  &_title {
    background: linear-gradient(90deg, #ffd500 0%, #a34420 100%);
    background-clip: text;
    -webkit-background-clip: text;
    color: transparent;
    -webkit-text-fill-color: transparent;
    margin-inline: auto;
  }
}

